src/objects/Cobertura__c.object
<CustomObject>
    <description>Objeto relacionado a la oportunidad que sirve para almacenar las coberturas.</description>
    <fields>
        <fullName>AceptaNuevasCoberturas__c</fullName>
        <description>Campo editado desde MKC cuando el usuario acepta o no las coberturas</description>
        <label>Acepta coberturas</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumeroPoliza__c</fullName>
        <description>Campo editado desde MKC cuando el usuario acepta o no las coberturas</description>
        <label>Acepta coberturas</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correoelectronico__c</fullName>
        <description>Campo editado desde MKC cuando el usuario acepta o no las coberturas</description>
        <label>Acepta coberturas</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poliza__c</fullName>
        <description>Campo editado desde MKC cuando el usuario acepta o no las coberturas</description>
        <label>Acepta coberturas</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnioCotizacion__c</fullName>
        <label>AnioCotizacion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnioFinVigencia__c</fullName>
        <label>Año Fin Vigencia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnioInicioVigencia__c</fullName>
        <label>Año Inicio Vigencia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnioMes__c</fullName>
        <label>Año / Mes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asunto__c</fullName>
        <label>Asunto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automovil__c</fullName>
        <label>Automovil</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NISAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clave__c</fullName>
        <externalId>true</externalId>
        <label>Clave</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodigoConfirmacion__c</fullName>
        <label>Codigo Confirmacion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodigoPostalTitular__c</fullName>
        <label>Codigo Postal Titular</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorreoDe__c</fullName>
        <label>Correo De</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CorreoEnviado__c</fullName>
        <label>Correo enviado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No enviado</fullName>
                    <default>true</default>
                    <label>No enviado</label>
                </value>
                <value>
                    <fullName>Enviado</fullName>
                </value>
                <value>
                    <fullName>Abierto</fullName>
                </value>
                <value>
                    <fullName>Cerrado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CorreoPara__c</fullName>
        <label>Correo Para</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Costo__c</fullName>
        <label>Costo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DerechoDePolizaRcUsa__c</fullName>
        <label>DerechoDePolizaRcUsa</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DerechoPoliza__c</fullName>
        <label>DerechoDePoliza</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Descripcion10__c</fullName>
        <label>Descripcion10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descripcion11__c</fullName>
        <label>Descripcion11</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descripcion12__c</fullName>
        <label>Descripcion12</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DescripcionCampanya__c</fullName>
        <label>Descripcion Campañia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DescripconFornaPago__c</fullName>
        <description>Campos que se utiliza para validar la descripcion que va a llevar dependiendo del campo forma de pago.</description>
        <label>DescripcionFormaPago</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Descuento__c</fullName>
        <label>Descuento</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiaFinVigencia__c</fullName>
        <label>Dia Fin Vigencia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiaInicioVigencia__c</fullName>
        <label>Dia Inicio Vigencia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FechaCotizacion__c</fullName>
        <label>FechaCotizacion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FechaFinVigencia__c</fullName>
        <label>Fecha Fin Vigencia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FechaInicioVigencia__c</fullName>
        <label>Fecha Inicio Vigencia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FechaNacimientoTitular__c</fullName>
        <label>Fecha Nacimiento Titular</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormaPago__c</fullName>
        <label>FormaDePago</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MENSUAL</fullName>
                </value>
                <value>
                    <fullName>Anual</fullName>
                </value>
                <value>
                    <fullName>Semestral</fullName>
                </value>
                <value>
                    <fullName>Trimestral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HashActivacion__c</fullName>
        <label>Hash Activacion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HoraCotizacion__c</fullName>
        <label>HoraCotizacion</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HoraFinVigencia__c</fullName>
        <label>Hora Fin Vigencia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HoraInicioVigencia__c</fullName>
        <label>Hora Inicio Vigencia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdCobertura__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Id Cobertura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Estatus__c</fullName>
        <description>Guarda el estatus en la que se encuentra la cobertura</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Estatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Siniestro__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Siniestro asociado a una o varias coberturas</description>
        <label>Siniestro</label>
        <referenceTo>Siniestro__c</referenceTo>
        <relationshipLabel>Coberturas</relationshipLabel>
        <relationshipName>Coberturas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marca__c</fullName>
        <label>Marca</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MesFinVigencia__c</fullName>
        <label>Mes Fin Vigencia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MesInicioVigencia__c</fullName>
        <label>Mes Inicio Vigencia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModeloAutomovil__c</fullName>
        <label>ModeloAutomovil</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modelo__c</fullName>
        <label>Modelo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moneda10__c</fullName>
        <label>Moneda10</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moneda11__c</fullName>
        <label>Moneda11</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moneda12__c</fullName>
        <label>Moneda12</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonedaDPRCU__c</fullName>
        <label>Moneda DPRCU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MXN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MonedaDP__c</fullName>
        <label>Moneda DP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MXN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MonedaPP__c</fullName>
        <label>Moneda PP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MXN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MonedaRCC__c</fullName>
        <label>Moneda RCC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MXN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MonedaSS__c</fullName>
        <label>Moneda SS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MXN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MonedaTP__c</fullName>
        <label>Moneda TP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MXN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monto10__c</fullName>
        <label>Monto10</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monto11__c</fullName>
        <label>Monto11</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monto12__c</fullName>
        <label>Monto12</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre1__c</fullName>
        <label>Nombre1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre2__c</fullName>
        <label>Nombre2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre3__c</fullName>
        <label>Nombre3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NombreCliente__c</fullName>
        <label>NombreCliente</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NombreCobertura__c</fullName>
        <formula>Name</formula>
        <label>Nombre Cobertura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NombreCompleto__c</fullName>
        <label>NombreCompleto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NombrePlan__c</fullName>
        <label>NombrePlan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NombreProducto__c</fullName>
        <label>NombreProducto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WIBE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NombreTemplate__c</fullName>
        <label>Nombre Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumeroPolizatxt__c</fullName>
        <externalId>true</externalId>
        <label>Número Póliza</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagosSubsecuentes__c</fullName>
        <label>PagosSubsecuentes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ParaMKC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Para MKC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PolizaFolio__c</fullName>
        <label>PolizaFolio</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaRcCarretero__c</fullName>
        <label>PrimaRcCarretero</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimerPagoConDerechoConCarretero__c</fullName>
        <label>Primer Pago Con Derecho Con Carretero</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimerPago__c</fullName>
        <label>PrimerPago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RutaAccesoMiWibe__c</fullName>
        <label>Ruta Acceso Mi Wibe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RutaAppStore__c</fullName>
        <label>RutaAppStore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RutaAuto__c</fullName>
        <label>RutaAuto</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RutaCallIcon__c</fullName>
        <label>RutaCallIcon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RutaCheckItem__c</fullName>
        <label>RutaCheckItem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RutaEncuestaOpinatorTitulo__c</fullName>
        <label>Ruta Encuesta Opinator Titulo</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RutaEncuestaOpinator__c</fullName>
        <label>Ruta Encuesta Opinator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RutaImagen__c</fullName>
        <label>Ruta Imagen</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RutaPdfIcon__c</fullName>
        <label>RutaPdfIcon</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RutaPlayStore__c</fullName>
        <label>RutaPlayStore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RutaPolizaHash__c</fullName>
        <label>Ruta Poliza Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RutaRecotizacion__c</fullName>
        <label>RutaRecotizacion</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RutaResetPassword__c</fullName>
        <label>Ruta Reset Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RutaWibeDiscount__c</fullName>
        <label>RutaWibeDiscount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SexoTitular__c</fullName>
        <label>Sexo Titular</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubMarca__c</fullName>
        <label>SubMarca</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TelefonoTitular__c</fullName>
        <label>Telefono Titular</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TienePoliza__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tiene Poliza</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TipoDocumento1__c</fullName>
        <label>TipoDocumento1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TipoDocumento2__c</fullName>
        <label>TipoDocumento2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TipoDocumento3__c</fullName>
        <label>TipoDocumento3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalPagar__c</fullName>
        <label>TotalAPagar</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url1__c</fullName>
        <label>Url1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url2__c</fullName>
        <label>Url2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url3__c</fullName>
        <label>Url3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coberturaRcCarreteroSeleccionada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CoberturaRcCarreteroSeleccionada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>coberturaRcCarreteroTexto__c</fullName>
        <label>Cobertura Rc Carretero Texto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coberturaRcCarretero__c</fullName>
        <label>Cobertura Rc Carretero</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coberturaRcUsaSeleccionada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>coberturaRcUsaSeleccionada</label>
        <type>Checkbox</type>
    </fields>
    <label>Cobertura</label>
    <nameField>
        <label>NombreCobertura</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coberturas</pluralLabel>
    <recordTypes>
        <fullName>UpSellingInterno</fullName>
        <active>true</active>
        <description>Sirve para hacer la carga de las coberturas para hacer el envío de Correo electrónico</description>
        <label>Up Selling Interno</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_SB_SAC_RamoAutoRT</fullName>
        <active>true</active>
        <description>Tipo de registro que se usará para los asesores de SAC de seguros para los siniestros de ramo auto</description>
        <label>Coberturas ramo auto</label>
    </recordTypes>
    <recordTypes>
        <fullName>activacionmiwibe</fullName>
        <active>true</active>
        <description>Tipo de registro para activación wibe</description>
        <label>activacionmiwibe</label>
    </recordTypes>
    <recordTypes>
        <fullName>contratacionautoseguro</fullName>
        <active>true</active>
        <description>Tipo de registro para contratación autoseguro</description>
        <label>contratacionautoseguro</label>
    </recordTypes>
    <recordTypes>
        <fullName>contratacionrccarretero</fullName>
        <active>true</active>
        <description>Tipo de registro para contratación rc carretero</description>
        <label>contratacionrccarretero</label>
    </recordTypes>
    <recordTypes>
        <fullName>cotizacionautoseguro</fullName>
        <active>true</active>
        <description>Para el template Cotización Autoseguro</description>
        <label>cotizacionautoseguro</label>
    </recordTypes>
    <recordTypes>
        <fullName>cotizacionrccarretero</fullName>
        <active>true</active>
        <description>Tipo de registro para Cotización RC Carretero</description>
        <label>cotizacionrccarretero</label>
    </recordTypes>
    <recordTypes>
        <fullName>preemisionautoseguro</fullName>
        <active>true</active>
        <description>Tipo de registro para Preemisión autoseguro</description>
        <label>preemisionautoseguro</label>
    </recordTypes>
    <recordTypes>
        <fullName>registromiwiwbe</fullName>
        <active>true</active>
        <description>Tipo de registro para registro wibe</description>
        <label>registromiwiwbe</label>
    </recordTypes>
    <recordTypes>
        <fullName>resetpasswordmiwibe</fullName>
        <active>true</active>
        <description>Tipo de registro para reset password wibe</description>
        <label>resetpasswordmiwibe</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>